welcome.lessons.welcome.bat.bool1.NearHundred.scala.error
nearHundred:6: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
    case a if Math.abs(a)<211 => true
                                 ^nearHundred:7: error: missing parameter type
    _ => false
    ^